<resources>
    <string name="app_name">抢修指挥</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="login_name_hint">请输入手机号码</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="rememberPwd">记住密码</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
