<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.login.LoginActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/login_name_hint"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:autofillHints="@string/login_name_hint"
        app:layout_constraintBottom_toTopOf="@+id/etPwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.816" />

    <EditText
        android:id="@+id/etPwd"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/login_pwd_hint"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:autofillHints="@string/login_pwd_hint"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.923" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/btn_login_bg"
        android:fontFamily="@font/aldrich"
        android:text="@string/login"
        android:textColor="#F7F3F3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:background="@drawable/btn_register_bg"
        android:text="@string/register"
        android:fontFamily="@font/aldrich"
        android:textColor="#F7F3F3"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="173dp"
        android:layout_height="147dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/login"
        app:srcCompat="@drawable/logo" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:layout_marginTop="176dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/rememberPwd"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etPwd"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</android.support.constraint.ConstraintLayout>